feat(skiplists): tests and benchmark